refactor cluster routing and harden raft-only metadata path